<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="language">Language</string>
    <string name="english_Lang">English</string>
    <string name="arabic_lang">Arabic</string>
    <string name="temp">Tempreature</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="windspeed">Wind Speed</string>
    <string name="speed">km/h</string>
    <string name="milesperh">Miles/Hour</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="notification">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="lang">en</string>
    <string name="today">Today</string>
    <string name="settings">settings</string>
    <string name="profile">profile</string>
    <string name="home">home</string>
    <string name="no_saved_location">You haven\'t saved any location</string>
    <string name="enable_the_location_to_use_the_app">Enable the location to use the app</string>
    <string name="apply">Apply</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="humidity">Humidity</string>
    <string name="Pressure">Pressure</string>
    <string name="Wind">Wind</string>
    <string name="Sunrise">Sunrise</string>
    <string name="Sunset">Sunset</string>
    <string name="Visibility">Visibility</string>
    <string name="updatesettings">Update Settings</string>
    <string name="feels_like">"Feels Like "</string>
    <string name="no_connection">"No Connection "</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="connection">Connection Restored</string>
    <string name="search">Search</string>
    <string name="please_select_a_location">Please select a location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="no_alrams">You haven\'t set any alarms\n</string>
    <string name="addalaram">Add alarm or notification\n</string>
    <string name="alarm">alarm</string>
    <string name="notifications">Notification</string>
    <string name="choosed">Select date</string>
    <string name="selecttime">Select time</string>
    <string name="set">Set</string>
    <string name="dismiss">Dismiss</string>
</resources>