<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_margin="25dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/language"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="@string/english_Lang" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:text="@string/arabic_lang" />
            </RadioGroup>

        </LinearLayout>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_temp"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_margin="25dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="35dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:id="@+id/linearLayout_language_selection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/temp"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_celisus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/celisus" />

                <RadioButton
                    android:id="@+id/radioButton_fahrenheit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fahrenheit" />

                <RadioButton
                    android:id="@+id/radioButton_Kelvin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Kelvin" />
            </RadioGroup>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_margin="25dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="35dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView_temp"
        tools:layout_editor_absoluteX="197dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/windspeedTV"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/windspeed"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/windSpeedRadioButton1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="@string/speed" />

                <RadioButton
                    android:id="@+id/windSpeedRadioButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:text="@string/milesperh" />
            </RadioGroup>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_margin="25dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="35dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        tools:layout_editor_absoluteX="197dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/locationtextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/location"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/locationRadioButton1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="@string/gps" />

                <RadioButton
                    android:id="@+id/locationRadioButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:text="@string/map" />
            </RadioGroup>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_margin="25dp"
        app:cardBackgroundColor="@color/secondary"

        app:cardCornerRadius="35dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        tools:layout_editor_absoluteX="197dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notificationtextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/notifcation"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/notificationRadioButton1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="@string/enable" />

                <RadioButton
                    android:id="@+id/notificationRadioButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:text="@string/disable" />
            </RadioGroup>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
